--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
                 background-image: url('rps.jpg');
             }
             #box{
-                padding-top:25px;
-                width:450px;
-                height:650px;
-                background-color:yellow;
-                top:380px;
-                left:750px;
-                position:absolute;
-                transform:translate(-50%,-50%);
-                box-sizing:border-box;
-                border-radius:10px;
-                text-align:center;
-                line-height:20px;
+                padding-top: 25px;
+                width: 450px;
+                height: 650px;
+                background-color: yellow;
+                position: absolute;
+                box-sizing: border-box;
+                border-radius: 10px;
+                text-align: center;
+                line-height: 20px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
             }
             label{
                 font-size: 20px;
